<resources>
    <string name="app_name">7084.1P</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="location">Location</string>
    <string name="event_title">Event Title</string>
    <string name="save">Save</string>
</resources>