<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragment_add_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="Event Title"
            android:ems="10"
            android:hint="@string/event_title"
            android:inputType="text"
            android:text="" />

        <Spinner
            android:id="@+id/category1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp" />

        <Spinner
            android:id="@+id/category2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="location"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            android:text="" />

        <Button
            android:id="@+id/selectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="20dp"
            android:text="@string/select_date" />

        <Button
            android:id="@+id/selectTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#C5BA85"
            android:text="@string/select_time" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2AB372"
            android:shadowColor="#FFFFFF"
            android:text="@string/save" />
    </LinearLayout>
</FrameLayout>